<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

  <TableLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="0,1,2"
    android:layout_margin="1dp">

    <TableRow
      android:divider="?android:attr/dividerHorizontal"
      android:showDividers="middle">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/fb_title"
        android:layout_column="0"
        android:singleLine="true"
        android:padding="5dip"
        android:text="@string/file_browser"
        android:layout_gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceMedium"/>


      <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/fb_upbutton"
        android:text="@string/up_button"
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"/>

      <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/fb_thisbutton"
        android:text="@string/this_button"
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"/>

      <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/fb_cancel_button"
        android:text="@string/cancel_button"
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"/>
    </TableRow>
  </TableLayout>

  <LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView
      android:id="@+id/filepath"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="Location: /sdcard/"
      android:textColor="@android:color/white"
      android:paddingLeft="5dip"
      android:paddingBottom="3dip"
      android:paddingTop="0dip"
      android:singleLine="false"
      android:textAppearance="?android:attr/textAppearanceMedium"/>

    <ListView

      android:id="@+id/filelist"
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      />

    <!-- This is to make sure the text box is always big -->
    <View
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_weight="1"/>

    <!-- The visibility of this is changed to visible when there are no files -->
    <TextView
      android:id="@+id/nofilemessage"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:gravity="center_vertical|center_horizontal"
      android:text="@string/nofilesindirectory"
      android:textColor="#aaa"
      android:textAppearance="?android:attr/textAppearanceMedium"
      android:visibility="gone"/>
    <View
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_weight="1"/>
  </LinearLayout>

</LinearLayout>
